fix: 🐛 z-index for page header

--- a/resources/variables.less
+++ b/resources/variables.less
@@ -224,9 +224,9 @@
 
 /* Z-Index */
 // @z-index-base: 0; - WMUI
-@z-index-page-header: 11;
-@z-index-site-header: 91;
-@z-index-overlay: 101; // WMUI
+@z-index-page-header: 12;
+@z-index-site-header: 92;
+@z-index-overlay: 102; // WMUI
 
 /* == Box model properties == */
 /* `--*size` variables are used for `*width` & `*height` properties. */
